echo/echo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo
spec:
  clusterIP: None
  selector:
    component: echo
  ports:
    - name: echo
      port: 8080
      targetPort: 8080
