echo/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: echo
  name: echo-ingress-services
  annotations:
    kubernetes.io/ingress.class: nginx # config rule, ingress controller, based on nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # if request has /api in it, rewrite it to just /
spec:
  rules:
    - host: echo.localhost
      http:
        paths:
          - path: /echo/(.+)
            backend:
              serviceName: echo-service
              servicePort: 8080
